# ECNU_EYU_data

./: .gitattributes  .gitignore  PROJECT_RULES.md  README.md
BraTS_2023_2024_solutions-main/: BraTS2024_Task1.md  BraTS2024_Task3.md  README.md  model.py
data_space/: README.md
data_space/bios_course_pdfs/: README.md
data_space/past_articles/: README.md
data_space/past_code/: README.md  代码解析.md  往年冠军代码_逐文件作用详解.md
data_space/task1_2026/: BraTS2026_Task1_English.md  BraTS2026_Task1_中文.md  README.md
data_space/task1_2026/reference_code/BraTS_evaluation/: .gitignore  README.md  VENDORED_SOURCE.md  pyproject.toml
data_space/task1_2026/reference_code/BraTS_evaluation/brats_evaluation/: __init__.py  evaluation.py  metrics_parser.py
data_space/task1_2026/reference_code/BraTS_evaluation/brats_evaluation/configs/: config_GoAT.yaml  config_MenRT.yaml  config_gli.yaml  config_mets.yaml  config_ped.yaml
data_space/task1_2026/reference_code/BraTS_evaluation/example/: brats_mets.ipynb  programmatic_example.py  sample_mets_metrics.json  sample_mets_summary.csv  sample_seg_summary.csv
data_space/task_assignments/: ECNU-NYU2026分工架构(2).docx  README.md
logs/: prep_data_12090379.out  prep_data_12105422.err  prep_data_12105422.out
time_pipeline/: README.md
work_space/: README.md
work_space/G1/: README.md  task_assignment.md
work_space/G2/: README.md  task_assignment.md
work_space/S1/: README.md  task_assignment.md
work_space/S2/: README.md  task_assignment.md
work_space/S3/: README.md  task_assignment.md
work_space/S4/: README.md  task_assignment.md
(+519 files in other folders)
